--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-N4OGW software: coming migration of https://code.google.com/p/so2sdr/
+N4OGW software: you probably want to go to <a href="http://n4ogw.github.io.so2sdr">So2sdr</a>
